# forge

./: .gitignore  Cargo.toml  TODO.md  flake.nix  result
devel/: flake.nix
docs/: architecture.md
includes/git/: include.wl  setup.sh
includes/overseer/: include.wl  setup.sh
languages/c/: flake.nix.template  lang.wl  setup.sh
languages/cpp/: flake.nix.template  lang.wl  setup.sh
languages/java/: flake.nix.template  lang.wl  setup.sh
languages/nix/: flake.nix.template  lang.wl  setup.sh
languages/python/: flake.nix.template  lang.wl  setup.sh
languages/r/: flake.nix.template  lang.wl  setup.sh
languages/rust/: flake.nix.template  lang.wl  setup.sh
languages/txt/: lang.wl  setup.sh
module/: completion.nix  completion.zsh  default.nix  includes.nix  languages.nix
module/includes/: git.nix  overseer.nix
module/languages/: c.nix  cpp.nix  java.nix  nix.nix  python.nix  r.nix  rust.nix  txt.nix
nix/: package.nix
share/zsh/site-functions/: _forge
src/: applied_includes.rs  cli.rs  commands.rs  config.rs  include.rs  index.rs  lib.rs  main.rs  paths.rs  project_state.rs  tmux.rs  verify_and_diff.rs  wl_parser.rs
src/commands/: cd.rs  check.rs  create.rs  edit.rs  health.rs  help.rs  include.rs  lang.rs  list.rs  open.rs  overseer.rs  overseer_def.rs  pick.rs  remove.rs  session.rs  setup.rs  sync.rs
tests/: TEST_PLAN.md  run.sh
tests/integration/: main.rs  suite.sh
tests/module/: queries.md
tests/shell/: completion-tests.sh
tests/unit/: queries.md
